--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,23 @@
 {
-    "name": "taylor/taylor-mvc",
-    "description": "A minimal MVC Framework",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "TaylorMVC\\App\\": "./"
-        }
-    },
-    "authors": [
-        {
-            "name": "taylor",
-            "email": "taylor@instantofferengine.com"
-        }
+  "name": "taylor/taylor-mvc",
+  "description": "A minimal MVC Framework",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "files": [
+      "./Core/helpers.php"
     ],
-    "require": {}
+    "psr-4": {
+      "TaylorMVC\\App\\": "./"
+    }
+  },
+  "authors": [
+    {
+      "name": "taylor",
+      "email": "taylor@instantofferengine.com"
+    }
+  ],
+  "require-dev": {
+    "phpstan/phpstan": "^1.9"
+  }
 }
